Implemented testing with Junit, mockk, and slf4j